vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__if_missing_end_if.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
if cond then
  x := 1;

== tree ==
IfStatement
  IfStatementPreamble
    Keyword(If)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'cond'
    Keyword(Then)
  SequenceOfStatements
    SimpleVariableAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'x'
      ColonEq
      LiteralExpression
        AbstractLiteral '1'
      SemiColon

== diagnostics ==
2:10 Expected(Node([IfStatementEpilogue]))
