vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__if_missing_then.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
if cond
  x := 1;
end if;

== tree ==
IfStatement
  IfStatementPreamble
    Keyword(If)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'cond'
  SequenceOfStatements
    SimpleVariableAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'x'
      ColonEq
      LiteralExpression
        AbstractLiteral '1'
      SemiColon
  IfStatementEpilogue
    Keyword(End)
    Keyword(If)
    SemiColon

== diagnostics ==
1:8 Expected(Token([Keyword(Then)]))
