vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__sequential_statement_stall.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
function f return integer is
begin
    use work.all;      -- `use` in SubprogramBody follow
end;
        

== tree ==
SubprogramBody
  SubprogramBodyPreamble
    FunctionSpecification
      Keyword(Function)
      Identifier 'f'
      Keyword(Return)
      Name
        NameDesignatorPrefix
          Identifier 'integer'
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)

== diagnostics ==
2:6 Expected([Token(Keyword(Wait)), Token(Keyword(Assert)), Token(Keyword(Report)), Token(Keyword(If)), Token(Keyword(Case)), Token(Keyword(For)), Token(Keyword(Loop)), Token(Keyword(While)), Token(Keyword(Next)), Token(Keyword(Exit)), Token(Keyword(Return)), Token(Keyword(Null)), Token(Keyword(With)), Token(Identifier), Token(LeftPar), Token(LtLt)])
2:6 Expected([Token(Keyword(End))])
2:6 Expected([Token(SemiColon)])
